--- a/day_2/requirements.txt
+++ b/day_2/requirements.txt
@@ -1,4 +1,5 @@
 langchain
+langchain-community 
 faiss-cpu
 openai                 # OpenAI Python client
 langchain-openai       # LangChain's integration for OpenAI
