--- a/day_3/requirements.txt
+++ b/day_3/requirements.txt
@@ -5,3 +5,5 @@ openai                 # OpenAI Python client
 langchain-openai       # LangChain's integration for OpenAI
 streamlit
 crewai
+python-dotenv
+crewai[tools]
