--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-requests==2.31.0
-smtplib==3.0.0
-langchain==0.2.0
-langchain-openai==0.1.0
-streamlit==1.32.0
-crewai==0.28.0
-python-dotenv==1.0.1
-gspread==6.0.0
-oauth2client==4.1.3
-waitress==2.1.2
+requests
+smtplib
+langchain
+langchain-openai
+streamlit
+crewai
+python-dotenv
+gspread
+oauth2client
+waitress
 
 
